resolve some communication's problems